<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_people" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height_people" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_people" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hair_color_people" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skin_color_people" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/tvNamePeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Name"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvHeightPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Height"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvGenderPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Gender"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvHairColorPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Hair Color"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvSkinColorPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Skin Color"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>