<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_planet" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/climate_planet" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/population_planet" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/tvNamePlanet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Planet"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvClimatePlanet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Climate"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvPopulationPlanet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Population"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>